--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <title>Start Bootstrap</title>
   </head>
   <body>
-    <h1>Start Bootstrap</h1>
+    <section class="header">
+      <nav>
+        <a href=""><span>Start Bootstrap</span></a>
+      </nav>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
