--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <body>
     <section class="header">
       <nav>
-        <a href=""><span>Start Bootstrap</span></a>
+        <a href="index.html"><span>Start Bootstrap</span></a>
+        <div class="nav-links">
+          
+        </div>
       </nav>
     </section>
 
