--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
       <nav>
         <a href="index.html"><span>Start Bootstrap</span></a>
         <div class="nav-links">
-          
+          <ul>
+            <li><a href="http://"></a></li>
+            <li><a href="http://"></a></li>
+            <li><a href="http://"></a></li>
+            <li><a href="http://"></a></li>
+            <li><a href="http://"></a></li>
+          </ul>
         </div>
       </nav>
     </section>
