--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <a href="index.html"><span>Start Bootstrap</span></a>
         <div class="nav-links">
           <ul>
-            <li><a href="http://"></a></li>
-            <li><a href="http://"></a></li>
-            <li><a href="http://"></a></li>
-            <li><a href="http://"></a></li>
-            <li><a href="http://"></a></li>
+            <li><a href="http://">About</a></li>
+            <li><a href="http://">Services</a></li>
+            <li><a href="http://">Portfolio</a></li>
+            <li><a href="http://">Contact</a></li>
           </ul>
         </div>
       </nav>
