--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <a href="index.html"><span>Start Bootstrap</span></a>
         <div class="nav-links">
           <ul>
-            <li><a href="http://">About</a></li>
-            <li><a href="http://">Services</a></li>
-            <li><a href="http://">Portfolio</a></li>
-            <li><a href="http://">Contact</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contact</a></li>
           </ul>
         </div>
       </nav>
+
+      
     </section>
 
     <!-- Optional JavaScript -->
