--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
           </ul>
         </div>
       </nav>
+      <div class="content">
+        <h1>Your Favorite Place for Free Bootstrap Themes</h1>
+        <p><h4>Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</h4></p>
+      </div>
 
-      
     </section>
 
     <!-- Optional JavaScript -->
