--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
       </nav>
       <div class="content">
-        <h1>Your Favorite Place for Free Bootstrap Themes</h1>
-        <p><h4>Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</h4></p>
+        <h1>Your Favorite Place for Free<br> Bootstrap Themes</h1>
+        <p><h4>Start Bootstrap can help you build better websites using the Bootstrap framework! Just<br> download a theme and start customizing, no strings attached!</h4></p>
       </div>
 
     </section>
