--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <div class="content">
         <h1>Your Favorite Place for Free<br> Bootstrap Themes</h1>
         <p><h4>Start Bootstrap can help you build better websites using the Bootstrap framework! Just<br> download a theme and start customizing, no strings attached!</h4></p>
+        <div>
+          <button type="btn">FIND OUT MORE</button>
+        </div>
       </div>
 
     </section>
