--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="header">
       <nav>
-        <a href="index.html"><span>Start Bootstrap</span></a>
+        <a href="index.html">Start Bootstrap</a>
         <div class="nav-links">
           <ul>
             <li><a href="">About</a></li>
@@ -25,12 +25,13 @@
         </div>
       </nav>
       <div class="content">
-        <h1>Your Favorite Place for Free<br> Bootstrap Themes</h1>
-        <p><h4>Start Bootstrap can help you build better websites using the Bootstrap framework! Just<br> download a theme and start customizing, no strings attached!</h4></p>
-        <div>
-          <button type="btn">FIND OUT MORE</button>
+          <h1>Your Favorite Place for Free<br> Bootstrap Themes</h1>
+          <p>Start Bootstrap can help you build better websites using the Bootstrap framework! Just<br> download a theme and start customizing, no strings attached!</p>
+          <div>
+              <button type="button"><span></span>FIND OUT MORE</button>
+              <!-- <a href="#" class="btn">FIND OUT MORE</a> -->
+          </div>
         </div>
-      </div>
 
     </section>
 
