--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="header">
       <nav>
-        <a href="index.html">Start Bootstrap</a>
+        <a href="index.html" class="name">Start Bootstrap</a>
         <div class="nav-links">
           <ul>
             <li><a href="">About</a></li>
