--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <p>Start Bootstrap can help you build better websites using the Bootstrap framework! Just<br> download a theme and start customizing, no strings attached!</p>
           <div>
               <button type="button"><span></span>FIND OUT MORE</button>
+              <button type="button" class="btn-color btn btn-outline-warning btn-lg">FIND OUT MORE</button>
               <!-- <a href="#" class="btn">FIND OUT MORE</a> -->
           </div>
         </div>
